[project]
name = "gravis-utils"
description = "A Discord Bot Utility"
requires-python = ">=3.9"
authors = [{ name = "gravis" }]
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dynamic = ["version", "dependencies"]

[project.urls]
"Main" = "https://github.com/gravisbotdev/utils/"

[tool.setuptools.dynamic]
dependencies = { file = "requirements.txt" }
